// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalOnboarding /> should not open when key is set in local storage 1`] = `
<commonstyle__ModalContainer
  animation={false}
  aria-labelledby="modal-title"
  bsSize="small"
  onHide={[Function]}
  show={false}
>
  <ForwardRef
    direction="column"
    p={8}
  >
    <ForwardRef
      direction="row"
      justify="space-between"
    >
      <Tag
        variant="yellow"
      >
        global.beta.feature
      </Tag>
      <Button
        aria-label="global.close"
        onClick={[Function]}
        p={0}
        rightIcon="CROSS"
      />
    </ForwardRef>
    <AppBox
      as={[Function]}
      my={4}
      p={0}
    >
      <ForwardRef
        direction="column"
      >
        <SpotIcon
          alignSelf="center"
          mb={4}
          name="EMAIL_SEND"
          size="lg"
        />
        <Heading
          as="h4"
          color="gray.900"
          fontWeight="semibold"
          mb={4}
        >
          welcome.new.emailing.tool
        </Heading>
        <Text
          color="gray.700"
          mb={4}
        >
          announcement.emailing.new.tool
        </Text>
        <Text
          color="gray.700"
        >
          consult-help-center-new-feature
        </Text>
      </ForwardRef>
    </AppBox>
    <Button
      alignSelf="center"
      onClick={[Function]}
      variant="primary"
      variantColor="primary"
    >
      learn.more.plus
    </Button>
  </ForwardRef>
</commonstyle__ModalContainer>
`;

exports[`<ModalOnboarding /> should open when no key in local storage 1`] = `
<commonstyle__ModalContainer
  animation={false}
  aria-labelledby="modal-title"
  bsSize="small"
  onHide={[Function]}
  show={true}
>
  <ForwardRef
    direction="column"
    p={8}
  >
    <ForwardRef
      direction="row"
      justify="space-between"
    >
      <Tag
        variant="yellow"
      >
        global.beta.feature
      </Tag>
      <Button
        aria-label="global.close"
        onClick={[Function]}
        p={0}
        rightIcon="CROSS"
      />
    </ForwardRef>
    <AppBox
      as={[Function]}
      my={4}
      p={0}
    >
      <ForwardRef
        direction="column"
      >
        <SpotIcon
          alignSelf="center"
          mb={4}
          name="EMAIL_SEND"
          size="lg"
        />
        <Heading
          as="h4"
          color="gray.900"
          fontWeight="semibold"
          mb={4}
        >
          welcome.new.emailing.tool
        </Heading>
        <Text
          color="gray.700"
          mb={4}
        >
          announcement.emailing.new.tool
        </Text>
        <Text
          color="gray.700"
        >
          consult-help-center-new-feature
        </Text>
      </ForwardRef>
    </AppBox>
    <Button
      alignSelf="center"
      onClick={[Function]}
      variant="primary"
      variantColor="primary"
    >
      learn.more.plus
    </Button>
  </ForwardRef>
</commonstyle__ModalContainer>
`;
